// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`language should allow a fixed number of args in functions 1`] = `
ParseResult {
  "ast": Array [
    Object {
      "kind": "globals_$0",
      "value": Object {
        "args": Object {
          "kind": "args",
          "lastArg": Object {
            "kind": "name",
            "name": "c",
          },
          "leadingArgs": Array [
            Object {
              "kind": "args_$0",
              "name": Object {
                "kind": "name",
                "name": "a",
              },
            },
            Object {
              "kind": "args_$0",
              "name": Object {
                "kind": "name",
                "name": "b",
              },
            },
          ],
        },
        "body": Object {
          "kind": "executable",
          "value": Array [],
        },
        "kind": "func",
        "name": Object {
          "kind": "name",
          "name": "argy",
        },
      },
    },
  ],
  "err": null,
}
`;

exports[`language should allow a global object 1`] = `
ParseResult {
  "ast": Array [
    Object {
      "kind": "globals_$0",
      "value": Object {
        "kind": "constant",
        "name": Object {
          "kind": "name",
          "name": "obj",
        },
        "value": Object {
          "fields": Object {
            "kind": "fields",
            "value": Array [],
          },
          "kind": "obj",
        },
      },
    },
  ],
  "err": null,
}
`;

exports[`language should allow empty public functions 1`] = `
ParseResult {
  "ast": Array [
    Object {
      "kind": "globals_$0",
      "value": Object {
        "args": Object {
          "kind": "args",
          "lastArg": null,
          "leadingArgs": Array [],
        },
        "body": Object {
          "kind": "executable",
          "value": Array [],
        },
        "kind": "func",
        "name": Object {
          "kind": "name",
          "name": "doSomething",
        },
      },
    },
  ],
  "err": null,
}
`;

exports[`language should allow many global objects 1`] = `
ParseResult {
  "ast": Array [
    Object {
      "kind": "globals_$0",
      "value": Object {
        "kind": "constant",
        "name": Object {
          "kind": "name",
          "name": "obj1",
        },
        "value": Object {
          "fields": Object {
            "kind": "fields",
            "value": Array [],
          },
          "kind": "obj",
        },
      },
    },
    Object {
      "kind": "globals_$0",
      "value": Object {
        "kind": "constant",
        "name": Object {
          "kind": "name",
          "name": "obj2",
        },
        "value": Object {
          "fields": Object {
            "kind": "fields",
            "value": Array [],
          },
          "kind": "obj",
        },
      },
    },
  ],
  "err": null,
}
`;

exports[`language should allow return statements within functions 1`] = `
ParseResult {
  "ast": Array [
    Object {
      "kind": "globals_$0",
      "value": Object {
        "args": Object {
          "kind": "args",
          "lastArg": null,
          "leadingArgs": Array [],
        },
        "body": Object {
          "kind": "executable",
          "value": Array [
            Object {
              "kind": "executable_$0",
              "value": "return",
            },
          ],
        },
        "kind": "func",
        "name": Object {
          "kind": "name",
          "name": "returny",
        },
      },
    },
  ],
  "err": null,
}
`;

exports[`language should allow setting of keys on a global object 1`] = `
ParseResult {
  "ast": Array [
    Object {
      "kind": "globals_$0",
      "value": Object {
        "kind": "constant",
        "name": Object {
          "kind": "name",
          "name": "gg",
        },
        "value": Object {
          "fields": Object {
            "kind": "fields",
            "value": Array [],
          },
          "kind": "obj",
        },
      },
    },
    Object {
      "kind": "globals_$0",
      "value": Object {
        "args": Object {
          "kind": "args",
          "lastArg": Object {
            "kind": "name",
            "name": "a",
          },
          "leadingArgs": Array [],
        },
        "body": Object {
          "kind": "executable",
          "value": Array [
            Object {
              "kind": "executable_$0",
              "value": Object {
                "kind": "assignment",
                "target": Object {
                  "kind": "select",
                  "value": Object {
                    "index": Object {
                      "kind": "literalIndex",
                      "value": Object {
                        "kind": "name",
                        "name": "abc",
                      },
                    },
                    "kind": "objectIndex",
                    "obj": Object {
                      "kind": "name",
                      "name": "gg",
                    },
                  },
                },
                "value": Object {
                  "kind": "expression",
                  "value": Object {
                    "kind": "name",
                    "name": "a",
                  },
                },
              },
            },
            Object {
              "kind": "executable_$0",
              "value": Object {
                "kind": "assignment",
                "target": Object {
                  "kind": "select",
                  "value": Object {
                    "index": Object {
                      "kind": "parameterIndex",
                      "value": Object {
                        "kind": "name",
                        "name": "a",
                      },
                    },
                    "kind": "objectIndex",
                    "obj": Object {
                      "kind": "name",
                      "name": "gg",
                    },
                  },
                },
                "value": Object {
                  "kind": "expression",
                  "value": Object {
                    "kind": "name",
                    "name": "a",
                  },
                },
              },
            },
            Object {
              "kind": "executable_$0",
              "value": Object {
                "kind": "assignment",
                "target": Object {
                  "kind": "select",
                  "value": Object {
                    "index": Object {
                      "kind": "parameterIndex",
                      "value": Object {
                        "kind": "expression",
                        "value": Object {
                          "kind": "str",
                          "value": "abc",
                        },
                      },
                    },
                    "kind": "objectIndex",
                    "obj": Object {
                      "kind": "name",
                      "name": "gg",
                    },
                  },
                },
                "value": Object {
                  "kind": "expression",
                  "value": Object {
                    "kind": "name",
                    "name": "a",
                  },
                },
              },
            },
          ],
        },
        "kind": "func",
        "name": Object {
          "kind": "name",
          "name": "fff",
        },
      },
    },
  ],
  "err": null,
}
`;
